Adding the sidebar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 
         <img class="ham" src="static/menu.png" alt="">
         <div id="fill"></div>
+    </nav>
+    <div>
+        <h1>This is the main page stuff</h1>
+    </div>
+    <div class="sidebar">
         <ul class="links">
             <li class="link" id="home">home</li>
             <li class="link" id="contact">contact</li>
@@ -29,8 +34,9 @@
             <img class="smedia" src="static/icons8-twitter-squared-24.png" alt="">
             <img class="smedia" src="static/icons8-youtube-24.png" alt="">
         </div>
+    </div>
 
-    </nav>
+
 
     <script src="main.js"></script>
 </body>
