Adding closing icon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="nav">
         <h1 class="brand">Code Addicts</h1>
-        <div id="fill"></div>
+        <div class="fill"></div>
         <img class="ham" src="static/menu.png" alt="">
     </nav>
     <div>
@@ -20,6 +20,7 @@
     </div>
     <div class="sidebar">
         <ul class="links">
+            <img class="cross" src="static/cross.png" alt="">
             <li class="link" id="home">home</li>
             <li class="link" id="contact">contact</li>
             <li class="link" id="about">about</li>
