Adding the toggle functionality with classList

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div>
         <h1>This is the main page stuff</h1>
     </div>
-    <div class="sidebar">
+    <aside class="sidebar">
         <ul class="links">
             <img class="cross" src="static/cross.png" alt="">
             <li class="link" id="home">home</li>
@@ -33,7 +33,7 @@
             <img class="smedia" src="static/icons8-twitter-squared-24.png" alt="">
             <img class="smedia" src="static/icons8-youtube-24.png" alt="">
         </div>
-    </div>
+    </aside>
 
 
 
